--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,17 @@
     "homepage": "https://github.com/atelierspierrot/patterns",
     "version": "1.0.3",
     "license": "GPL-3.0",
-    "authors": [{
+    "authors": [
+        {
+            "name": "Les Ateliers Pierrot & contributors",
+            "email": "contact@ateliers-pierrot.fr",
+            "homepage": "http://www.ateliers-pierrot.fr/"
+        },{
             "name": "Pierre Cassat",
             "email": "piero.wbmstr@gmail.com",
             "homepage": "https://github.com/PieroWbmstr"
-    }],
+        }
+    ],
     "require": { "php": ">=5.3.0" },
     "require-dev": { "sami/sami": "dev-master" },
     "autoload": { "psr-0": {  "Patterns": "src" } }
