--- a/.gitignore
+++ b/.gitignore
@@ -2,21 +2,48 @@
 !.gitkeep
 
 # OS & software files
-._*
 .DS_Store
+.AppleDouble
+.LSOverride
+.Spotlight-V100
+.Trashes
+Icon
+._*
 *~
+*~lock*
 Thumbs.db
 ehthumbs.db
-Icon
+Desktop.ini
 
 # Les Ateliers specifics:
 
 # the composer lock file
 composer.lock
 
-# the external packages installed by Composer
+# user defined files
+user/*
+
+# the external packages installed by Composer, Template Engine or others
 vendor/*
+bin/vendor/*
+data/vendor/*
+src/vendor/*
+www/vendor/*
+
+# the documentation, that is NOT under version-control by default
+# this may be commented on the "dev" branch
+#phpdoc/*
 
 # for development ...
-tmp/*
+# this may be commented on the "wip" branch
 dev/*
+build/*
+
+# any "tmp*" file or dir
+tmp*
+bin/tmp*
+demo/tmp*
+data/tmp*
+user/tmp*
+src/tmp*
+www/tmp*
