--- a/composer.json
+++ b/composer.json
@@ -4,20 +4,21 @@
     "description": "A set of PHP classic interfaces or abstract classes patterns.",
     "keywords": [ "php", "patterns", "design patterns" ],
     "homepage": "https://github.com/atelierspierrot/patterns",
-    "version": "1.0.4",
+    "version": "1.0.5-dev",
     "license": "GPL-3.0",
-    "authors": [
-        {
-            "name": "Les Ateliers Pierrot & contributors",
-            "email": "contact@ateliers-pierrot.fr",
-            "homepage": "http://www.ateliers-pierrot.fr/"
-        },{
-            "name": "Pierre Cassat",
-            "email": "piero.wbmstr@gmail.com",
-            "homepage": "https://github.com/PieroWbmstr"
-        }
-    ],
+    "authors": [{
+        "name": "Les Ateliers Pierrot & contributors",
+        "email": "contact@ateliers-pierrot.fr",
+        "homepage": "http://www.ateliers-pierrot.fr/"
+    },{
+        "name": "Pierre Cassat",
+        "email": "piero.wbmstr@gmail.com",
+        "homepage": "https://github.com/PieroWbmstr"
+    }],
     "require": { "php": ">=5.3.0" },
-    "require-dev": { "sami/sami": "dev-master" },
+    "require-dev": { 
+        "sami/sami": "dev-master",
+        "phpmd/phpmd" : "1.4.*"
+    },
     "autoload": { "psr-0": {  "Patterns": "src" } }
 }
