--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,12 @@
         "homepage": "http://www.ateliers-pierrot.fr/"
     },{
         "name": "Pierre Cassat",
-        "homepage": "http://github.com/piwi"
+        "homepage": "http://e-piwi.fr/"
     }],
     "require": { "php": ">=5.3.0" },
     "require-dev": { 
-        "sami/sami": "dev-master",
-        "phpmd/phpmd" : "1.4.*"
+        "sami/sami": "@stable",
+        "phpmd/phpmd" : "@stable"
     },
     "autoload": { "psr-0": {  "Patterns": "src" } },
     "extra": {
